# slovenC

./: .gitignore  README.md
language/: CMakeLists.txt  IDE_backend.cpp  SlovenCLanguageLexer.g4  SlovenCLanguageParser.g4  generate.cmd  generate.sh  interpreter.cpp  main.cpp  serializer.cpp
language/antlr/: SlovenCLanguageLexer.cpp  SlovenCLanguageLexer.h  SlovenCLanguageLexer.interp  SlovenCLanguageLexer.tokens  SlovenCLanguageParser.cpp  SlovenCLanguageParser.h  SlovenCLanguageParser.interp  SlovenCLanguageParserBaseListener.h  SlovenCLanguageParserBaseVisitor.cpp  SlovenCLanguageParserBaseVisitor.h  SlovenCLanguageParserListener.h  SlovenCLanguageParserVisitor.h
language/lib/antlr4-runtime/: CMakeLists.txt
language/src/Model/: Scope.cpp  Scope.h  Visitable.cpp  Visitable.h
language/src/antlr/: SlovenCLanguageLexer.cpp  SlovenCLanguageLexer.h  SlovenCLanguageLexer.interp  SlovenCLanguageLexer.tokens  SlovenCLanguageParser.cpp  SlovenCLanguageParser.h  SlovenCLanguageParser.interp  SlovenCLanguageParser.tokens  SlovenCLanguageParserBaseListener.cpp  SlovenCLanguageParserBaseListener.h  SlovenCLanguageParserBaseVisitor.h  SlovenCLanguageParserListener.cpp  SlovenCLanguageParserListener.h  SlovenCLanguageParserVisitor.cpp  SlovenCLanguageParserVisitor.h
language/src/async/: Job.cpp  Job.h  JobManager.cpp  JobManager.h
language/src/builder/: Builder.cpp  Builder.h  CurrentState.cpp  CurrentState.h  ExpressionBuilder.cpp  ExpressionBuilder.h  StatementBuilder.cpp  StatementBuilder.h  SymbolBuilder.cpp  SymbolBuilder.h  TypeBuilder.cpp  TypeBuilder.h
language/src/graph/: SymbolSearcher.cpp
language/src/interpreter/: Interpreter.cpp  Interpreter.h  PredefinedInterpreter.cpp  PredefinedInterpreter.h  RuntimeException.cpp  RuntimeException.h  SlovenCRuntimeException.cpp  SlovenCRuntimeException.h
language/src/model/: Constants.h  Context.cpp  Context.h  Model.h  Scope.cpp  Scope.h  Visitable.cpp  Visitable.h
language/src/pipeline/: FileSymbolJob.cpp  FileSymbolJob.h  LinkerJob.cpp  LinkerJob.h  LinkerManagerJob.cpp  LinkerManagerJob.h  ProjectJob.cpp  ProjectJob.h
language/src/project/: Project.cpp  Project.h
language/src/utils/: ContainerUtils.h  (+1 more)
(+404 files in other folders)
